--- a/.github/workflows/nasa-images.yml
+++ b/.github/workflows/nasa-images.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   download_images:
     runs-on: ubuntu-latest
-
+    continue-on-error: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
